# expenses-project-tui

./: .gitignore  Cargo.toml  config.json.example  password.txt
src/: main.rs  state.rs
src/enums/: currency.rs  mod.rs  month.rs  selected_block.rs  transaction_type.rs
src/models/: category.rs  custom_error.rs  mod.rs  transaction.rs  user.rs
src/requests/: auth.rs  health.rs  mod.rs  transaction.rs  user.rs
src/states/: mod.rs  tables.rs  tabs.rs
src/types/: mod.rs
src/types/request/: user.rs
src/types/responses/: login.rs  mod.rs  response.rs  transaction.rs
src/ui/: blocks.rs  colors.rs  mod.rs  paragraph.rs  summary.rs  tables.rs  tabs.rs
src/utils/: mod.rs  transaction_utils.rs
